versioned_docs/version-2.8/reference/subsystems/coursier.mdx
---
title: coursier
description: |
  A dependency resolver for the Maven ecosystem.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A dependency resolver for the Maven ecosystem.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[coursier]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `known_versions`

<Option
  cli_repr={`--coursier-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_COURSIER_KNOWN_VERSIONS'
  toml_repr={`[coursier]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "v2.0.13|linux_arm64 |8d428bede2d9d0e48ffad8360d49de48bd0c2c3b0e54e82e3a7665019b65e4d0|58622664",\n  "v2.0.13|linux_x86_64|1ae089789cc4b0a4d296d6852b760d7f8bf72805267a6b7571e99b681d5e13b4|59652208",\n  "v2.0.13|macos_arm64 |d74b8fe4ffc2f4e9011d7151722fc8b5ffca8a72b3bc4188c61df3326228c4ef|57625024",\n  "v2.0.13|macos_x86_64|d74b8fe4ffc2f4e9011d7151722fc8b5ffca8a72b3bc4188c61df3326228c4ef|57625024"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

- `version` is the version string
- `platform` is one of [linux_arm64,linux_x86_64,macos_arm64,macos_x86_64],
- `sha256` is the 64-character hex representation of the expected sha256
  digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes, as emmitted by
  `wc -c`

E.g., `3.1.2|macos_x86_64|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--coursier-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_COURSIER_URL_PLATFORM_MAPPING'
  toml_repr={`[coursier.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "linux_arm64": "aarch64-pc-linux",\n  "linux_x86_64": "x86_64-pc-linux",\n  "macos_arm64": "x86_64-apple-darwin",\n  "macos_x86_64": "x86_64-apple-darwin"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool.

In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary.

For example, if you define `{"macos_x86_64": "apple-darwin", "linux_x86_64": "unknown-linux"}, and run Pants on Linux with an intel architecture, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

### `url_template`

<Option
  cli_repr={`--coursier-url-template=<str>`}
  env_repr='PANTS_COURSIER_URL_TEMPLATE'
  toml_repr={`[coursier]
url_template = <str>`}
  default_repr={`https://github.com/coursier/coursier/releases/download/{version}/cs-{platform}`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies or for access via the filesystem through a `file:$abspath` URL (e.g. `file:/this/is/absolute`, possibly by [templating the buildroot in a config file](https://www.pantsbuild.org/v2.8/docs/options#config-file-entries)).

Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `use_unsupported_version`

<Option
  cli_repr={`--coursier-use-unsupported-version=<UnsupportedVersionUsage>`}
  env_repr='PANTS_COURSIER_USE_UNSUPPORTED_VERSION'
  toml_repr={`[coursier]
use_unsupported_version = <UnsupportedVersionUsage>`}
  one_of='error, warning'
  default_repr={`error`}
>

What action to take in case the requested version of coursier is not supported.

Supported coursier versions: unspecified

</Option>

### `version`

<Option
  cli_repr={`--coursier-version=<str>`}
  env_repr='PANTS_COURSIER_VERSION'
  toml_repr={`[coursier]
version = <str>`}
  default_repr={`v2.0.13`}
>

Use this version of coursier.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
